--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.18.2",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.330.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
