--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.14",
+    "@tabler/icons-react": "^3.30.0",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "clsx": "^2.1.0",
+    "@types/three": "^0.173.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
     "lucide-react": "^0.330.0",
+    "motion": "^12.4.1",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
+    "three": "^0.173.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
