--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
+    "mini-svg-data-uri": "^1.4.4",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1"
